# LexAlign

./: .gitignore  README.md  align.py  conftest.py  download.py  finetune.py  main.ipynb  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  session.md  start.sh
api/: __init__.py  main.py  store.py
api/routers/: __init__.py  align.py  download.py  files.py  finetune.py  status.py
config/: align.yaml.example  downloads.yaml.example  finetune.yaml.example
docs/plans/: 2026-02-25-align-design.md  2026-02-25-align-implementation.md  2026-02-25-download-tool-design.md  2026-02-25-download-tool-implementation.md  2026-02-25-finetune-design.md  2026-02-25-finetune-implementation.md  2026-02-25-real-e2e-tests-design.md  2026-02-25-real-e2e-tests-implementation.md  2026-02-26-docker-dev-env-design.md  2026-02-26-docker-dev-env-implementation.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: align.spec.ts  dashboard-overview.spec.ts  download.spec.ts  finetune.spec.ts  landing.spec.ts  navigation.spec.ts
tests/: test_align_cli.py  test_align_dataset_prep.py  test_align_e2e.py  test_align_parser.py  test_auth.py  test_checkpoint.py  test_cli.py  test_config_base.py  test_config_parser.py  test_dataset_downloader.py  test_dataset_prep.py  test_device.py  test_dpo_trainer.py  test_e2e.py  test_finetune_cli.py  test_finetune_parser.py  test_gdpo_trainer.py  test_lora_config.py  test_model_downloader.py  test_real_e2e.py  test_trainer.py
(+38 files in other folders)
